# CSS499-Collabinator

./: CollabStyle.css  Dockerfile  INIT.bat  README.md  START.bat  __init__.py  alerts.py  auth.py  collabinator_backend.py  dataGate.py  db.py  document.py  documents.py  functionbundles.py  home.html  login.html  members.py  models.py  pyproject.toml  roles.py  schema.sql  workflow.py
app/: wsgi.py
app/collabinator/: __init__.py  alerts.py  auth.py  db.py  documents.py  members.py  roles.py  schema.sql
app/collabinator/templates/: alerts.html  base.html  index.html
app/collabinator/templates/docview/: responses.html  viewDocument.html
app/collabinator/templates/manage/: editMember.html  members.html  roles.html
flask-app/: auth.py  db.py  schema.sql
flask-app/static/: style.css
flask-app/templates/docview/: updateDocument.html  viewDocument.html
flask-app/templates/manage/: members.html
server-conf/: default-sites  flask-site-nginx.conf  supervisord.conf
static/: style.css
templates/: CollabStyle.css  alerts.html  base.html  doc.html  home.html  index.html  login.html  members.html  settings.html  signup.html
templates/auth/: login.html  register.html
templates/docview/: addDocument.html  replies.html  responses.html  updateDocument.html  viewDocument.html
templates/manage/: addRoles.html  alerts.html  editMember.html  members.html  roles.html
